# pbp-batch

./: .gitignore  LICENSE  README.md  pbp_batch.py  pyproject.toml  requirements.txt
pbp_batch/: __init__.py  _deploy.py  _gui_server.py  _serve.py  cli.py  config.py  core.py  gui.py  pbp_yaml_maker.py  prefect_script.py
test_data/: 6478.230522204410.log.xml
yaml_templates/: pbpbatch_globalAttributes_template.yaml  variableAttributes_template.yaml
