[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbp-batch"
version = "0.0.2"
description = "Running mbari-pbp library for full deployments"
authors = [
    { name = "Xavier Mouy", email = "xavier.mouy@whoi.edu" }
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11, <3.12" 
dependencies = [
    "mbari-pbp==1.8.74",
    "prefect",
	"soundfile",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[tool.setuptools]
packages = ["pbp_batch"]

[project.scripts]
pbp-batch = "pbp_batch.cli:main"
